# verdant-beech

./: .cursorrules  .gitignore  KNOWLEDGE_RAG.md  LICENSE  README.md  TESTING.md  TOOLS.md  WEBGPU_GUIDE.md  index.html  models.yaml  package-lock.json  package.json  playwright.config.js  pytest.ini  setup.bat  setup.sh  vite.config.js
scripts/: apply_headers.py  generate_locales.py  lint_locales.py
server/: main.py  pyproject.toml  rag.py  tools.yaml
server/verdant_beech_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: CartographyProps.js  MapLayers.js  main.js  style.css
src/locales/: ar.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gu.json  he.json  hi.json  hr.json  hu.json  id.json  is.json  it.json  ja.json  jv.json  ko.json  lt.json  lv.json  ml.json  mr.json  ms.json  nl.json  or.json  pa.json  pl.json  pt.json  ro.json  ru.json  sk.json  sl.json  sr.json  sv.json  (+10 more)
tests/: .gitkeep  e2e.spec.js  test_backend.py  test_coverage_100.py  test_coverage_gaps.py  test_i18n.js  test_projects.py  test_tool_architecture.py
tests/eval/: datasets.json  eval_failure_mining.py  eval_multimodal.py  eval_rag.py  eval_rubric.py  test_prompt_assembly.py
