[project]
name = "verdant-beech-server"
version = "0.1.0"
description = "FastAPI backend for the Verdant Beech cartography agent."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "litellm>=1.15.0",
    "pillow>=10.1.0",
    "python-multipart>=0.0.6",
    "numpy>=1.26.2",
    "orjson>=3.9.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0",
    "ollama>=0.1.6",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0"
]

[tool.setuptools]
py-modules = ["main", "rag"]
